--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -43,6 +43,6 @@
 
 body{
   color: var(--black200r);
-  background-color: var(--mainBg-color);
+  background-color: var(--black400r);
   font-family: var(--mainEng-font);
 }
